--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,73 @@ body {
     padding-inline: 15px;
 }
 
+.abs-img {
+  display: none;
+}
+
+.section-subtitle {
+  color: var(--ultramarine-blue);
+  text-transform: uppercase;
+  font-weight: var(--fw-800);
+  letter-spacing: 2px;
+  margin-block-end: 5px;
+}
+
+.h1, .h2, .h3 {
+  color: var(--space-cadet-2);
+  line-height: 1.3;
+  font-weight: var(--fw-800);
+}
+
+.h1 {
+  font-size: var(--fs-1);
+}
+
+.h2 {
+  font-size: var(--fs-2);
+}
+
+.h3 {
+  font-size: var(--fs-4);
+  font-weight: var(--fw-700);
+}
+
+.btn {
+  min-height: 60px;
+  max-width: max-content;
+  font-size: var(--fs-5);
+  font-weight: var(--fw-700);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 30px;
+  border-radius: var(--radius-6);
+  transition: var(--transition-1);
+}
+
+.btn-primary {
+  background-color: var(--ultramarine-blue);
+  color: var(--white);
+}
+
+.btn-primary:is(:hover, :focus) {
+  background-color: var(--space-cadet-2);
+}
+
+.btn-secondary {
+  background-color: var(--white);
+  color: var(--ultramarine-blue);
+}
+
+.btn-secondary:is(:hover, :focus) {
+  background-color: var(--pumpkin);
+  color: var(--white);
+}
+
+.w-100 {
+  width: 100%;
+}
+
 /* Header */
 .login-btn .span {
     display: none;
@@ -164,7 +231,6 @@ body {
 
 .header.active {
     background-color: var(--white);
-    padding-block: 15px;
     box-shadow: var(--shadow-2);
 }
 
@@ -252,4 +318,106 @@ body {
 
 .navbar-link:is(:hover, :focus) {
     color: var(--ultramarine-blue);
+}
+
+.overlay {
+    position: fixed;
+    inset: 0;
+    background-color: var(--black_80);
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-1);
+}
+
+.overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+/* Search Box */
+.search-container {
+    position: fixed;
+    inset: 0;
+    background-color: var(--space-cadet_80);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 5;
+    opacity: 0;
+    visibility: hidden;
+    transition: var(--transition-1);
+}
+
+.search-container.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.search-container .container {
+    max-width: 500px;
+    width: 100%;
+}
+
+.search-close-btn {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    background-color: var(--white);
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.search-wrapper {
+    position: relative;
+}
+
+.search-field {
+    background-color: var(--white);
+    padding: 20px 40px;
+    border-radius: var(--radius-6);
+    color: var(--old-lavender);
+    font-weight: var(--fw-500);
+}
+
+.search-field::-webkit-search-cancel-button {
+    display: none;
+}
+
+.search-submit {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+/* Hero */
+
+.hero {
+    padding-block-start: calc(60px + var(--section-padding));
+    padding-block-end: var(--section-padding);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.hero .container {
+    display: grid;
+    gap: 30px;
+}
+
+.hero-title {
+  margin-block-end: 25px;
+}
+
+.hero-text {
+  font-size: var(--fs-5);
+  font-weight: var(--fw-500);
+  margin-block-end: 30px;
+}
+
+.hero-banner {
+  max-width: max-content;
+  margin-inline: auto;
 }
